--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,9 +33,9 @@ jobs:
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3 # v3.0.2
+        uses: sigstore/cosign-installer@v3.7.0
         with:
-          cosign-release: 'v2.0.1'
+          cosign-release: 'v2.4.1'
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
